# replicest

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES.txt  build.rs
.github/workflows/: docs.yml  testing.yml  testing_macos.yml  testing_ubuntu.yml  testing_windows.yml
benches/: benchmark.rs  benchmark_replication.rs
benches/_data/: imp2.csv
benches/benchmark/: helper.rs  replication.rs
bindings/: .gitignore  uniffi.toml
docs/: replicest_server.md
examples/: elementary_functions_usage.rs  fluent_api_usage.rs
misc/BIFIEsurveyComparison/: compare_groupby.R  quantiles.R
misc/BIFIEsurveyComparison/data/: asgautr5.csv
src/: analysis.rs  data_preparation.rs  errors.rs  estimates.rs  external.rs  helper.rs  lib.rs  replication.rs  replicest.udl
tests/: integration_test.rs
tests/_data/: cat.csv  imp1.csv  imp3.csv  imp4.csv  imp5.csv  wgt.csv
