[package]
name = "replicest"
version = "0.1.0"
edition = "2021"
exclude = [
    "misc"
]
license = "LGPL-2"
authors = [ "Konrad Oberwimmer <konrad.oberwimmer@gmail.com>" ]

[lib]
name = "replicest"
crate-type = ["lib", "cdylib"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"], optional = true }
directories = { version = "6.0.0", optional = true }
nalgebra = "0.33.0"
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
uds_windows = {  version = "1.1.0", optional = true }
uniffi = { version = "0.25.0"}

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serial_test = {  version = "3.1.1" }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"]}
uniffi_bindgen = "0.25.0"

[features]
build_replicest_server = ["clap", "directories", "rmp-serde", "uds_windows"]

[[bin]]
name = "replicest_server"
path = "src/bin/replicest_server.rs"
required-features = ["build_replicest_server"]

[[bench]]
name = "benchmark"
harness = false