[package]
name = "replicest"
version = "0.1.0"
edition = "2021"
exclude = [
    "misc"
]
license = "LGPL-2"
authors = [ "Konrad Oberwimmer <konrad.oberwimmer@gmail.com>" ]

[lib]
name = "replicest"
crate-type = ["lib", "cdylib"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
nalgebra = "0.33.0"
rmp-serde = { version = "1.3.0" }
serde = { version = "1.0.210", features = ["derive"] }
uniffi = { version = "0.25.0"}

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serial_test = {  version = "3.1.1" }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"]}
uniffi_bindgen = "0.25.0"

[[bin]]
name = "replicest_server"
path = "src/bin/replicest_server.rs"

[[bench]]
name = "benchmark"
harness = false